# AsynLogSystem

./: CMakeLists.txt  README.md
examples/: test.cpp
logs_code/: AsyncLogger.hpp  AsyncWorker.hpp  Manager.hpp  Util.hpp
logs_code/backlog/: CliBackupLog.hpp
